trying to get settings.php tobe effective on pagodabox site

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,37 @@
-# Ignore configuration files that may contain sensitive information.
-sites/*/settings*.php
-
 # Ignore paths that contain user-generated content.
-sites/*/files
+#sites/*/files
 sites/*/private
+#sites/default/settings.php
+/cache
+.htaccess
+.htpasswd
+phpMyAdmin/config.inc.php
+phpMyAdmin/*
+# Packages #
+############
+*.7z
+*.dmg
+*.gz
+*.bz2
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.tgz
+# Logs and databases #
+######################
+*.log
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+._*
+
+# Vim generated files #
+######################
+*.un~
+*.swp
