--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore paths that contain user-generated content.
-#sites/*/files
+sites/*/files
 sites/*/private
 sites/default/settings.php
 /cache
